methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:14: error: value Green is not a member of object java.awt.Color
    if (getCouleurSol()== Color.Green) {
                                ^