methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  
  if (estFaceMur()) {
    
    return false
    
  } 
  
  else {
  
  	avance();
  
  	if (getCouleurSol()== Color.Green) {
    
    	recule();
    	
      return true
    
  	}
    
    return false
    
  }
  
}